--- a/dom cvounter/index.html
+++ b/dom cvounter/index.html
@@ -7,16 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-   
-   
-   <h1 id="rotles">Ik ben een titel met tekst</h1>
-
-   <button onclick="kleur_aanpassen ()">click me</button>
-
-<script src="app.js"></script>
-
-
-
-
+ <h1 id="h1">keer gelukt</h1>
+ 
+    <button onclick="clicker()" id="btn">Click me!</button>
+<button onclick="clicker2()" id="btn2">Click me!</button>
+    <script defer src="app.js"></script>
 </body>
 </html>
