--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-   
-   
-   <h1 id="rotles">Ik ben een titel met tekst</h1>
-
-   <button onclick="kleur_aanpassen ()">click me</button>
-
-<script src="app.js"></script>
+    <h1 id="h1"></h1>
 
 
-
-
+    <script defer src="app.js"></script>
+    
+    
 </body>
 </html>
